sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:19: error: not found: value swaped
  } while(swaped)
          ^